--- a/EditorHexa.cbp
+++ b/EditorHexa.cbp
@@ -31,6 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="src/main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/main.h" />
+		<Unit filename="src/udf.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/udf.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
