--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,13 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 
 add_executable(Editor
     # headers
-    src/main.h
     src/udf.h
 
     #sources
     src/main.c
     src/udf.c
-
-
 )
+
+if(MSVC)
+    target_compile_definitions(Editor PUBLIC _CRT_SECURE_NO_WARNINGS)
+endif()
